# nanosvg

./: .gitignore  CMakeLists.txt  README.md
embedded/: PerformanceTimer.hpp  bezier.cpp  bezier.h  main.cpp  nanosparser.cpp  nanosparser.hpp
src/: nanosvg.c  nanosvg.h  nanosvgrast.c  nanosvgrast.h
